# Voice-RAG

./: .gitignore  README.md  config.py  diagnose_rag.py  index.html  knowledge_base.py  knowledge_base_tool.py  main.py  pyproject.toml  rag_manager.py  voice_agent.py  web_search_tool.py
chroma_db/: chroma.sqlite3
src/api/routes/: ingest.py  media.py  websocket.py
src/core/: auth.py  config.py  prompts.py  sessions.py
src/services/: knowledge_base.py  voice_orchestrator.py
src/tools/: multimodal.py  rag.py  web.py
src/voice_rag/api/routes/: ingest.py  websocket.py
src/voice_rag/core/: auth.py  config.py  prompts.py
src/voice_rag/services/: knowledge_base.py  voice_orchestrator.py
src/voice_rag/tools/: rag.py  web.py
static/css/: style.css
static/js/: app.js
tools/: rag.py  web.py
